--- a/app/src/main/res/layout/carb_calc_activity.xml
+++ b/app/src/main/res/layout/carb_calc_activity.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:orientation="vertical"
     android:id="@+id/carb_calc_activity"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,4 +10,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
