--- a/app/src/main/res/layout/carb_calc_add_trip.xml
+++ b/app/src/main/res/layout/carb_calc_add_trip.xml
@@ -66,7 +66,7 @@
                 android:editable="false"
                 android:textSize="20dp"
                 android:textStyle="italic"
-                android:text="Total CO2:"
+                android:text="CO2 (m-tons):"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 />
