--- a/app/src/main/res/layout/carb_calc_detail.xml
+++ b/app/src/main/res/layout/carb_calc_detail.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/trip_title_info"
             android:layout_height="wrap_content"
-            android:text="Name of Trip"
+            android:text="Select a trip"
             android:layout_margin="10dp"
             android:layout_marginBottom="15dip"
             android:textSize="30sp"
@@ -30,14 +30,14 @@
             android:text="Edit"
             android:id="@+id/editbutton"
             android:layout_alignParentRight="false"
-            android:layout_toStartOf="@+id/donebutton" />
+            android:layout_toStartOf="@+id/deleteButton" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Done"
-            android:id="@+id/donebutton"
+            android:text="Delete"
+            android:id="@+id/deleteButton"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
@@ -45,7 +45,7 @@
     <TextView
         android:id="@+id/category_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
+        android:text="Add a new trip by tapping the menu item 'Add Trip'"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -55,7 +55,6 @@
     <TextView
         android:id="@+id/vehicletype_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -63,7 +62,6 @@
     <TextView
         android:id="@+id/distance_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -71,7 +69,6 @@
     <TextView
         android:id="@+id/carbon_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -79,7 +76,6 @@
     <TextView
         android:id="@+id/date_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -87,7 +83,6 @@
     <TextView
         android:id="@+id/note_info"
         style="@style/tripDetailStyle"
-        android:text="Test testtest test test test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
