--- a/app/src/main/res/layout-large/carb_calc_activity.xml
+++ b/app/src/main/res/layout-large/carb_calc_activity.xml
@@ -7,23 +7,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity3">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
+
+       <!-- <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/titleListTrips"
-            android:textSize="30dp"/>
+            android:textSize="30dp"/>-->
         <fragment
             class="com.example.tgk.integration.CarbCalcListFragment"
             android:id="@+id/list_pane"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
-    </LinearLayout>
+
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
