--- a/app/src/main/res/layout/simple_text_view1.xml
+++ b/app/src/main/res/layout/simple_text_view1.xml
@@ -3,13 +3,23 @@
     android:id="@+id/simple_list_test"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/trip_id"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/name"
-        android:text="TextView" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/name"
+            android:text="Trip " />
+         <TextView
+            android:id="@+id/trip_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView2"
+            android:layout_alignLeft="@+id/name"
+            android:text="TextView" />
+    </LinearLayout>
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
