--- a/app/src/main/res/layout-large/carb_calc_activity.xml
+++ b/app/src/main/res/layout-large/carb_calc_activity.xml
@@ -2,10 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:orientation="horizontal"
     android:id="@+id/carb_calc_activity_large"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity3">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity3">
 
 
        <!-- <TextView
